fixed overflowing layout bug for each task

--- a/src/components/Task/Task.css
+++ b/src/components/Task/Task.css
@@ -14,4 +14,6 @@
 
 .Task__title {
     margin-left: 1.5rem;
+    overflow-wrap: break-word;
+    overflow: auto;
 }
